css/styles.css
body {
    text-align: center;
}

section {
    margin: 4rem 0;
}

hr {
    height: 0;
    border-color: #d6e0f0;
    border-style: none dotted none none;
    border-width: 6px;
    height: 3rem;
    width: 0%;
  }

#title {
    margin: 1rem 0;
}

h1, h2, h3, h4 {
    font-family: "Montserrat";
}

h1 {
    font-weight: 700;
    font-size: 3.5rem;
}

h2 {
    font-size: 2.8rem;
    margin: 2rem 0;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

.content {
    padding: 16px;
}
.sticky + .content {
    padding-top: 60px;
  }

#nav-main {
    left: 0;
    right: 0;
    background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgba(255,255,255,1) 20%);
    z-index: 100;
}

.nav-link {
    padding: .4rem .5rem;
}

.extra-pad {
    padding-top: 105px;
}

.position-company {
    display: inline-block;
}

.company {
    font-weight: 700;
    font-size: 1.5rem;
}

.position {
    font-style: italic;
}

.position-company p {
    display: inline-block;
}

.location {
    font-weight: 200;
}

.period {
    font-family: "Montserrat";
    font-weight: 600;
}

.experience-head {
    margin-bottom: .5rem;
}

.experience-head p {
    margin: 0;
} 

.experience-body {
    margin: 1.5rem 0;
}

.experience-card {
    margin: 2rem auto;
    padding: 2rem;
    box-shadow: 5px 5px 20px #f2f6f7;
    border-radius: 10%;
    max-width: 70%;
}

.nav-narrow {
    display: none;
}

@media (max-width: 575.98px) {
    .nav-wide {   
        display: none;
    }

    .nav-narrow {
        display: block;
    }
}

.section-container {
    padding-top: 72px;
}

.skill-card {
    padding: 0.5rem 0.7rem;
    margin: auto ;
    /* background: red; */
}


.skill-section {
    padding: 0.7rem 2.7rem;
    margin: 1.5rem 0;
}

.skill-section h3 {
    margin-bottom: 1rem;
}

.card-img-top {
    border-radius: 10%;
    object-fit: cover;
    width: 250px;
    height: 100%;
}

.content {
    overflow: hidden;
    max-height: 0;
    transition: max-height 0.3s;
}

.project-card {
    border-radius: 20%;
    padding: 2rem 2rem 0;
    background-color: none;
    transition: background-color 0.3s;
    box-shadow: 0px 5px 20px #efefef;
}

.stack-info {
    font-weight: 300;
}

